2004-08-23 Ian Rutt
 * Finished replacing namelist input with Magi's config-type parameter
   file format. Removed old namelist code.
 * Added two new functions (for reading real(dp) variables and arrays) to
   glimmer_config.f90.

2004-08-19 Ian Rutt
 * Moved PDD and precip forcing parameters into the namelist, and slightly
   reorganized glimmer_paramets.f90 and glimmer_physcon.f90. Would like to
   get rid of both these files eventually.
 * Removed redundant nout and nstr parameters from model
 * Expanded test_config, and added it to build/install in makefile
 * Began work to replace namelist input with Magi's config-type file
 * Added functions to glimmer_config.f90 to check whether section/value
   names are in a prescribed list or not.
	
2004-08-18 Magnus Hagdorn
 * Brown Paper Back: only applied half the patch to glimmer_thck.f90
   derivatives should be devided by 2*grid_length rather than multiplied

2004-08-18 Ian Rutt
 * Formatting and documentation of glimmer_thck.f90
 * Changes to g_land.gln to be compatible with changes to option handling
 * Added upper-surface calculation after isostasy calc

2004-08-17 Ian Rutt
 * Added unrecognised option handling for whichevol and whichwvel
 * Improved formatting of line numbers in glide_messages.f90
 * Reformatted glimmer_thck.f90

2004-08-16 Ian Rutt
 * Tidied up unrecognised option handling in a few places
 * Minor formatting changes
 * Removed unused option whichstrs

2004-08-13 Ian Rutt
 * Updated documentation a little
 * Minor formatting changes
 * Changes to some constants to conform with EISMINT-1. These should be
   moved to the configuration files at some point.
 
2004-08-13 Magnus Hagdorn
 * fixed bug in glimmer_thck.f90: size of opvrew,opvrns is different from ipvr so where
   construct cannot be used
 * fixed bug in glimmer_velo.f90: last row/column of calculations was missed
 * fixed bug where constant was only set on first pass (glimmer_temp.f90, glimmer_modu.f90)