@@ -1,3 +1,6 @@
+2004-08-24 Ian Rutt
+ * Added user input to determine length of glimmer_example run
+
 2004-08-23 Ian Rutt
  * Finished replacing namelist input with Magi's config-type parameter
    file format. Removed old namelist code.
